[project]
name = "langgraph-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=1.2.13,<2.0.0)",
    "langchain-openai (>=1.1.12,<2.0.0)",
    "langchain-tavily (>=0.2.17,<0.3.0)",
    "langgraph (>=1.1.3,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
